[package]
name = "chdb-bindings-rs"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.69.1"
reqwest = { version = "0.11.22", features = ["blocking"] }
zip = "0.6.6"
